<resources>
    <string name="app_name">News app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="aaj_tak">Aaj Tak</string>
    <string name="abp_news">ABP News</string>
    <string name="ndtv">NDTV</string>
    <string name="bcc_news">BCC News</string>
    <string name="times_of_india">Times of India</string>
    <string name="the_hindu">The Hindu</string>
    <string name="dainik_bhaskar">Dainik Bhaskar</string>
    <string name="amanzing_fact">Amanzing Fact</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bcc">bcc</string>
    <string name="toc">toc</string>
    <string name="hindu">hindu</string>
    <string name="db">db</string>
</resources>